# dora-agent

./: .gitignore  README.md  dataflow.yml  pyproject.toml  robot
nodes/: settings.py
nodes/agent_bridge/: mock_agent.py  node.py  smolagents_agent.py  tools.py
nodes/cli_interface/: node.py
nodes/simulation/: node.py
tests/: test_mock_agent.py  test_tools.py
