[project]
name = "dora-agentic-control"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dora-rs>=0.4.1,<0.5",
    "pyarrow>=14.0",
    "pybullet>=3.2.5",
    "numpy>=1.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
smolagents = ["smolagents>=1.0", "openai>=1.0"]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nodes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
